@startuml
class com.mycompany.eva3_9_custom_exceptions.EVA3_9_CUSTOM_EXCEPTIONS
class java.util.logging.Level
class java.util.logging.Logger
com.mycompany.eva3_9_custom_exceptions.EVA3_9_CUSTOM_EXCEPTIONS ..> java.util.logging.Level
com.mycompany.eva3_9_custom_exceptions.EVA3_9_CUSTOM_EXCEPTIONS ..> java.util.logging.Logger
class EVA3_9_CUSTOM_EXCEPTIONS {
    + main(String[] args): void
}

class Persona {
    - nombre: String
    - apellido: String
    - edad: int
    + Persona()
    + Persona(String nombre, String apellido, int edad) throws DatoIncorrectoCheckEx
    + getNombre(): String
    + setNombre(String nombre): void
    + getApellido(): String
    + setApellido(String apellido): void
    + getEdad(): int
    + setEdad(int edad) throws DatoIncorrectoCheckEx
}

class DatoIncorrectoException {
    + DatoIncorrectoException()
}

class DatoIncorrectoCheckEx {
    + DatoIncorrectoCheckEx()
}
@enduml